--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -13,7 +13,7 @@ op-permission-level=4
 pvp=true
 snooper-enabled=true
 level-type=DEFAULT
-hardcore=true
+hardcore=false
 enable-command-block=false
 max-players=12
 network-compression-threshold=256
